
syntax = "proto3";

package identity;


service Identifier {

  rpc GetAccountInfo (AccountInfoRequest) returns (AccountInfoReply);
}


message AccountInfoRequest {
  string id = 1;
}


message AccountInfoReply {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string created_at = 5;
}
