syntax = "proto3";

package profile;


service Profiler {

  rpc GetProfileInfo (ProfileRequest) returns (ProfileReply);
}


message ProfileRequest {
  string user_id = 1;
}


message ProfileReply {
  string display_name = 1;
  string avatar_id = 2;
}
